sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not found: value verif
	verif=true;
        ^AlgBubbleSort1:4: error: not found: value verif
	while(verif){
              ^AlgBubbleSort1:5: error: not found: value verif
		verif=false;
                ^AlgBubbleSort1:9: error: not found: value verif
				verif=true;
                                ^